[metadata]
name = sgp_shared
version = 0.0.16
author = Job Heersink
author_email = j.g.heersink@sgpapertronics.com
url = https://github.com/SG-Papertronics/shared
description = A collection of pydantic models and shared utility functions to be used across different projects
long_description = file: README.md
long_description_content_type = text/markdown
keywords = beer-o-meter, r-and-d-lab-app, setuptools
license = private
classifiers =
    Programming Language :: Python :: 3


[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    pydantic >= 1.10.6
